wp-content/themes/sixgill/css/custom/mobile_portrait_search.css
/* Blog mobile portrait styles */
@media (max-width: 500px) and (orientation: portrait) {
	.form-page-search {
		margin: 0 auto;
		margin-top: 90px;
	}

	.background-search {
		margin-top: 80px;
	}

	.margin-table-search {
		margin-top: 0px;
	}

	.menu-search-mobile-tablet {
		margin-top: 12px;
	}
}

